--- a/index.html
+++ b/index.html
@@ -24,22 +24,8 @@
 
 	<div class="section-links"> 
 	
-			<div class="link">
-				<a href="https://www.facebook.com/AbdullahAlnooh80">
-			<p class="link-title">Facebook</p>
-			<p class="link-des">My account on facebook</p>
-			</a>
-			</div>
 	
-	
-	<div class="link">
-			<a href="https://www.instagram.com/AbdullahAlnooh">
-				<p class="link-title">Instagram</p>
-				<p class="link-des">My account on Instagram</p>
 
-			</a>
-		</div>
-	
 	<div class="link">
 			<a href="https://twitter.com/Abdulla984_">
 				<p class="link-title">Twitter</p>
@@ -60,6 +46,28 @@
 				<p class="link-des">My account on Linkedin</p>
 			</a>
 		</div>
+
+		<div class="link">
+			<a href="https://kaay.hashnode.dev/">
+				<p class="link-title">MyBlog</p>
+				<p class="link-des">Place where i write About technology</p>
+			</a>
+		</div>
+		<div class="link">
+			<a href="https://www.instagram.com/AbdullahAlnooh">
+				<p class="link-title">Instagram</p>
+				<p class="link-des">My account on Instagram</p>
+
+			</a>
+		</div>
+		
+		<div class="link">
+			<a href="https://www.facebook.com/AbdullahAlnooh80">
+		<p class="link-title">Facebook</p>
+		<p class="link-des">My account on facebook</p>
+		</a>
+		</div>
+
 
 
 	</div>
